--- a/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/tasks/main.yml
+++ b/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - set_fact:
-    test_vpc_name: "ansible-vpc-{{ 101 | random(1,10) }}"
+    test_vpc_name: ansible-vpc-{{ 101 | random(1,10) }}
 
 - block:
     - include_tasks: setup.yml
