--- a/tests/integration/targets/test_awsconfig_multiregion_cloudtrail/tasks/main.yml
+++ b/tests/integration/targets/test_awsconfig_multiregion_cloudtrail/tasks/main.yml
@@ -1,11 +1,12 @@
+---
 - set_fact:
-    test_resource_prefix: "ansible-multiregion-cloudtrail-{{ 101 | random(1,10) }}"
+    test_resource_prefix: ansible-multiregion-cloudtrail-{{ 101 | random(1,10) }}
 
 - block:
     - set_fact:
-        s3_bucket_name: "s3-{{ test_resource_prefix }}"
-        cloud_trail_name: "trail-{{ test_resource_prefix }}"
-  
+        s3_bucket_name: s3-{{ test_resource_prefix }}
+        cloud_trail_name: trail-{{ test_resource_prefix }}
+
     - name: Create S3 Bucket
       s3_bucket:
         name: "{{ s3_bucket_name }}"
@@ -32,11 +33,11 @@
         operation: delete
         trail_name: "{{ cloud_trail_name }}"
 
-    # Validate that the cloud trail has been deleted
+  # Validate that the cloud trail has been deleted
 
   always:
     - name: Delete S3 bucket
       s3_bucket:
-        name: "s3-{{ s3_bucket_name }}"
+        name: s3-{{ s3_bucket_name }}
         state: absent
       ignore_errors: true
