--- a/roles/awsconfig_detach_and_delete_internet_gateway/tasks/main.yml
+++ b/roles/awsconfig_detach_and_delete_internet_gateway/tasks/main.yml
@@ -1,10 +1,9 @@
 ---
 - fail:
-    msg: "Internet gateway Id to delete must be defined as internet_gateway_id"
+    msg: Internet gateway Id to delete must be defined as internet_gateway_id
   when: internet_gateway_id is not defined
 
 - block:
-
     # Wait for Internet Gateway Id being available
     - name: Wait for internet gateway being available
       amazon.aws.ec2_vpc_igw_info:
@@ -51,8 +50,7 @@
       when: detach is failed
 
     - debug:
-        msg: "Internet Gateway Id {{ internet_gateway_id }} detached from VPC and successfully deleted."
+        msg: Internet Gateway Id {{ internet_gateway_id }} detached from VPC and successfully deleted.
 
   module_defaults:
-    group/aws:
-      "{{ aws_role_credentials }}"
+    group/aws: "{{ aws_role_credentials }}"
