--- a/roles/customized_ami/tasks/main.yml
+++ b/roles/customized_ami/tasks/main.yml
@@ -1,11 +1,10 @@
 ---
 - fail:
-    msg: "Custom AMI name should be defined using variable custom_ami_name"
+    msg: Custom AMI name should be defined using variable custom_ami_name
   when: custom_ami_name is undefined
 
 - block:
     - include_tasks: "{{ custom_ami_operation }}.yaml"
 
   module_defaults:
-    group/aws:
-      "{{ aws_role_credentials }}"
+    group/aws: "{{ aws_role_credentials }}"
