--- a/roles/ec2_instance_terminate_by_tag/tasks/main.yml
+++ b/roles/ec2_instance_terminate_by_tag/tasks/main.yml
@@ -1,11 +1,8 @@
 ---
-
 - block:
-
     - name: Verify that tag to terminate instances with was provided
       ansible.builtin.fail:
-        msg:
-          -"Please set 'tag_key_to_terminate_instances' to a tag based on which instances should be terminated..."
+        msg: -"Please set 'tag_key_to_terminate_instances' to a tag based on which instances should be terminated..."
       when: tag_key_to_terminate_instances | length == 0
 
     - name: Prepare filters dict to filter running instances with specified tag
@@ -26,7 +23,7 @@
         - debug:
             msg:
               - "'terminate_protected_instances' is set to True..."
-              - "Instances with termination protection enabled will also be terminated..."
+              - Instances with termination protection enabled will also be terminated...
           when: instance_ids | length != 0
 
         - name: Disable instance termination protection if terminate_protected_instances is true
@@ -46,15 +43,13 @@
         - "{{ instance_ids }}"
 
   always:
-
     - name: Create list of terminated instances
       ansible.builtin.set_fact:
         terminated_instances: "{{ terminate_result.results | map(attribute='terminate_success') | list | flatten }}"
     - debug:
         msg:
-          - "Terminated instances successfully -> {{ terminated_instances }}"
+          - Terminated instances successfully -> {{ terminated_instances }}
       when: terminated_instances | length != 0
 
   module_defaults:
-    group/aws:
-      "{{ aws_role_credentials }}"
+    group/aws: "{{ aws_role_credentials }}"
