--- a/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/tasks/setup.yml
+++ b/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/tasks/setup.yml
@@ -1,28 +1,29 @@
+---
 - name: Create a VPC to work in
   ec2_vpc_net:
-    cidr_block: '{{ test_vpc_cidr }}'
-    name: '{{ test_vpc_name }}'
+    cidr_block: "{{ test_vpc_cidr }}"
+    name: "{{ test_vpc_name }}"
   register: vpc
 
 - name: Create Subnet for EC2 instance
   ec2_vpc_subnet:
-    vpc_id: '{{ vpc.vpc.id }}'
-    cidr: '{{ test_subnet_cidr }}'
+    vpc_id: "{{ vpc.vpc.id }}"
+    cidr: "{{ test_subnet_cidr }}"
   register: subnet
 
 - name: Create internet gateway attached to the VPC
   ec2_vpc_igw:
-    vpc_id: '{{ vpc.vpc.id }}'
+    vpc_id: "{{ vpc.vpc.id }}"
     state: present
   register: igw
 
 - name: Create Route table for internet gateway (public subnet)
   ec2_vpc_route_table:
-    vpc_id: '{{ vpc.vpc.id }}'
+    vpc_id: "{{ vpc.vpc.id }}"
     subnets:
       - "{{ subnet.subnet.id }}"
     routes:
-      - dest: "0.0.0.0/0"
+      - dest: 0.0.0.0/0
         gateway_id: "{{ igw.gateway_id }}"
     lookup: tag
     resource_tags:
@@ -38,9 +39,9 @@
 - name: Create a virtual machine
   ec2_instance:
     name: "{{ test_ec2_instance_name }}"
-    instance_type: "t2.micro"
+    instance_type: t2.micro
     image_id: "{{ images.images.0.image_id }}"
-    subnet_id: '{{ subnet.subnet.id }}'
+    subnet_id: "{{ subnet.subnet.id }}"
     network:
       assign_public_ip: true
     wait: true
