--- a/tests/integration/targets/test_customized_ami/defaults/main.yml
+++ b/tests/integration/targets/test_customized_ami/defaults/main.yml
@@ -3,5 +3,5 @@ ami_initial_packages:
   - podman
 ami_update_packages:
   - libvirt
-ami_infra_vpc_cidr: "172.1.0.0/16"
-ami_infra_subnet_cidr: "172.1.0.0/24"
+ami_infra_vpc_cidr: 172.1.0.0/16
+ami_infra_subnet_cidr: 172.1.0.0/24
