--- a/tests/integration/targets/test_customized_ami/tasks/create_infra.yml
+++ b/tests/integration/targets/test_customized_ami/tasks/create_infra.yml
@@ -1,23 +1,23 @@
 ---
 - name: Create a VPC to work in
   ec2_vpc_net:
-    cidr_block: '{{ ami_infra_vpc_cidr }}'
-    name: 'vpc-{{ test_resource_prefix }}'
+    cidr_block: "{{ ami_infra_vpc_cidr }}"
+    name: vpc-{{ test_resource_prefix }}
     tags:
       test: "{{ test_resource_prefix }}"
   register: vpc
 
 - name: Create a public subnet
   ec2_vpc_subnet:
-    vpc_id: '{{ vpc.vpc.id }}'
-    cidr: '{{ ami_infra_subnet_cidr }}'
+    vpc_id: "{{ vpc.vpc.id }}"
+    cidr: "{{ ami_infra_subnet_cidr }}"
     tags:
       test: "{{ test_resource_prefix }}"
   register: subnet
 
 - name: Create internet gateway attached to the VPC
   ec2_vpc_igw:
-    vpc_id: '{{ vpc.vpc.id }}'
+    vpc_id: "{{ vpc.vpc.id }}"
     tags:
       test: "{{ test_resource_prefix }}"
     state: present
@@ -25,11 +25,11 @@
 
 - name: Create Route table for internet gateway (public subnet)
   ec2_vpc_route_table:
-    vpc_id: '{{ vpc.vpc.id }}'
+    vpc_id: "{{ vpc.vpc.id }}"
     subnets:
       - "{{ subnet.subnet.id }}"
     routes:
-      - dest: "0.0.0.0/0"
+      - dest: 0.0.0.0/0
         gateway_id: "{{ igw.gateway_id }}"
     tags:
       test: "{{ test_resource_prefix }}"
@@ -38,15 +38,15 @@
 - name: Create security group allowing SSH connection
   ec2_group:
     name: "{{ test_resource_prefix }}-security"
-    vpc_id: '{{ vpc.vpc.id }}'
-    description: "Security group for EC2 instance SSH"
+    vpc_id: "{{ vpc.vpc.id }}"
+    description: Security group for EC2 instance SSH
     rules:
-      - cidr_ip: "0.0.0.0/0"
+      - cidr_ip: 0.0.0.0/0
         proto: tcp
         from_port: 22
         to_port: 22
     rules_egress:
-      - cidr_ip: "0.0.0.0/0"
+      - cidr_ip: 0.0.0.0/0
         proto: -1
     tags:
       test: "{{ test_resource_prefix }}"
@@ -55,7 +55,7 @@
 
 - name: Create key pair to connect to the VM
   ec2_key:
-    name: 'key-{{ test_resource_prefix }}'
+    name: key-{{ test_resource_prefix }}
     tags:
       test: "{{ test_resource_prefix }}"
   register: rsa_key
@@ -82,10 +82,10 @@
     - name: Create a virtual machine
       ec2_instance:
         name: "{{ ec2_instance_name }}"
-        instance_type: "t2.micro"
+        instance_type: t2.micro
         image_id: "{{ ami_info.images.0.image_id }}"
-        key_name: 'key-{{ test_resource_prefix }}'
-        subnet_id: '{{ subnet.subnet.id }}'
+        key_name: key-{{ test_resource_prefix }}
+        subnet_id: "{{ subnet.subnet.id }}"
         network:
           assign_public_ip: true
           groups:
@@ -101,8 +101,8 @@
     - name: Add host to inventory
       ansible.builtin.add_host:
         name: "{{ ec2_instance_name }}"
-        ansible_ssh_user: "fedora"
+        ansible_ssh_user: fedora
         ansible_host: "{{ result.instances.0.public_ip_address }}"
-        ansible_ssh_common_args: '-o "UserKnownHostsFile=/dev/null" -o StrictHostKeyChecking=no -i {{ keyfile_path }}'
+        ansible_ssh_common_args: -o "UserKnownHostsFile=/dev/null" -o StrictHostKeyChecking=no -i {{ keyfile_path }}
 
   when: ec2_instance_name is defined
