--- a/tests/integration/targets/test_customized_ami/tasks/delete_infra.yml
+++ b/tests/integration/targets/test_customized_ami/tasks/delete_infra.yml
@@ -2,7 +2,7 @@
 - name: Get vpc information
   ec2_vpc_net_info:
     filters:
-      tag:Name: "vpc-{{ test_resource_prefix }}"
+      tag:Name: vpc-{{ test_resource_prefix }}
   register: vpcinfo
 
 - name: Delete resource created to test custom AMI
@@ -26,7 +26,7 @@
 
     - name: Delete key pair to connect to the bastion VM
       ec2_key:
-        name: "key-{{ test_resource_prefix }}"
+        name: key-{{ test_resource_prefix }}
         state: absent
 
     - name: List Security group from VPC
@@ -58,7 +58,7 @@
 
     - name: Delete internet gateway
       ec2_vpc_igw:
-        vpc_id: '{{ vpc_id }}'
+        vpc_id: "{{ vpc_id }}"
         state: absent
 
     - name: Delete subnets
@@ -69,8 +69,8 @@
 
     - name: Delete VPC
       ec2_vpc_net:
-        name: '{{ vpcinfo.vpcs.0.tags.Name }}'
-        cidr_block: '{{ vpcinfo.vpcs.0.cidr_block }}'
+        name: "{{ vpcinfo.vpcs.0.tags.Name }}"
+        cidr_block: "{{ vpcinfo.vpcs.0.cidr_block }}"
         state: absent
 
   when: vpcinfo.vpcs | length == 1
