--- a/roles/aws_setup_credentials/tasks/main.yml
+++ b/roles/aws_setup_credentials/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Define intial value for credentials
-  set_fact:
+  ansible.builtin.set_fact:
     aws_role_credentials: {}
 - name: Create auth credentials
-  include_tasks: read_option.yml
+  ansible.builtin.include_tasks: read_option.yml
   with_dict: "{{ aws_connection_env }}"
