--- a/roles/customized_ami/tasks/delete.yaml
+++ b/roles/customized_ami/tasks/delete.yaml
@@ -1,12 +1,12 @@
 ---
 - name: List existing AMI by name
-  ec2_ami_info:
+  amazon.aws.ec2_ami_info:
     filters:
       name: "{{ custom_ami_name }}"
   register: existing
 
 - name: Delete AMI
-  ec2_ami:
+  amazon.aws.ec2_ami:
     name: "{{ item.name }}"
     image_id: "{{ item.image_id }}"
     wait: true
