--- a/roles/awsconfig_multiregion_cloudtrail/tasks/main.yml
+++ b/roles/awsconfig_multiregion_cloudtrail/tasks/main.yml
@@ -1,21 +1,28 @@
 ---
-- fail:
+- name: Fail when unexpected value for operation is provided
+  ansible.builtin.fail:
     msg: Unexpected value for operation, should be one of 'create' or 'delete'
   when: operation not in ['create', 'delete']
 
-- fail:
+- name: Fail when 'trail_name' is not defined
+  ansible.builtin.fail:
     msg: Cloud trail name must be defined using variable trail_name
   when: trail_name is undefined
 
-- fail:
+- name: Fail when 'bucket_name' is not defined
+  ansible.builtin.fail:
     msg: Bucket name must be defined using variable bucket_name
   when:
     - operation == 'create'
     - bucket_name is undefined
 
-- block:
+- name: Run 'awsconfig_multiregion_cloudtrail' role
+  module_defaults:
+    group/aws: "{{ aws_role_credentials }}"
+
+  block:
     - name: Create Cloud trail and start logging or Delete existing Cloud trail
-      cloudtrail:
+      amazon.aws.cloudtrail:
         state: "{{ (operation == 'create') | ternary('present', 'absent') }}"
         name: "{{ trail_name }}"
         enable_logging: true
@@ -24,27 +31,28 @@
         is_multi_region_trail: true
       register: result
 
-    - block:
-        - debug:
+    - name: Create/update trail
+      when: operation == 'create'
+      block:
+        - name: Verify that trail has been created/updated
+          ansible.builtin.debug:
             msg: Trail '{{ trail_name }}' successfully created/updated.
           when: result is changed
 
-        - debug:
+        - name: Verify that trail already exists
+          ansible.builtin.debug:
             msg: Trail '{{ trail_name }}' already exists.
           when: result is not changed
 
-      when: operation == 'create'
-
-    - block:
-        - debug:
+    - name: Delete trail
+      when: operation == 'delete'
+      block:
+        - name: Verify that trail has been deleted
+          ansible.builtin.debug:
             msg: Trail '{{ trail_name }}' successfully deleted.
           when: result is changed
 
-        - debug:
+        - name: Verify that trail does not exists anymore
+          ansible.builtin.debug:
             msg: Trail '{{ trail_name }}' does not exist.
           when: not result.changed
-
-      when: operation == 'delete'
-
-  module_defaults:
-    group/aws: "{{ aws_role_credentials }}"
