--- a/roles/customized_ami/tasks/create_ec2_resources.yaml
+++ b/roles/customized_ami/tasks/create_ec2_resources.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Create a VPC to work in
-  ec2_vpc_net:
+  amazon.aws.ec2_vpc_net:
     cidr_block: "{{ custom_ami_vpc_cidr }}"
     name: vpc-{{ ec2_resource_prefix }}
     tags:
@@ -8,7 +8,7 @@
   register: vpc
 
 - name: Create a public subnet
-  ec2_vpc_subnet:
+  amazon.aws.ec2_vpc_subnet:
     vpc_id: "{{ vpc.vpc.id }}"
     cidr: "{{ custom_ami_subnet_cidr }}"
     tags:
@@ -16,7 +16,7 @@
   register: subnet
 
 - name: Create internet gateway attached to the VPC
-  ec2_vpc_igw:
+  amazon.aws.ec2_vpc_igw:
     vpc_id: "{{ vpc.vpc.id }}"
     tags:
       role: customized_ami
@@ -24,7 +24,7 @@
   register: internet_gw
 
 - name: Create Route table for internet gateway (public subnet)
-  ec2_vpc_route_table:
+  amazon.aws.ec2_vpc_route_table:
     vpc_id: "{{ vpc.vpc.id }}"
     subnets:
       - "{{ subnet.subnet.id }}"
@@ -36,7 +36,7 @@
     state: present
 
 - name: Create security group allowing SSH connection
-  ec2_group:
+  amazon.aws.ec2_security_group:
     name: "{{ ec2_resource_prefix }}-security"
     vpc_id: "{{ vpc.vpc.id }}"
     description: Security group allowing SSH connection to EC2 instance
@@ -54,21 +54,21 @@
   register: secgroup
 
 - name: Create key pair to connect to the VM
-  ec2_key:
+  amazon.aws.ec2_key:
     name: key-{{ ec2_resource_prefix }}
     tags:
       role: customized_ami
   register: rsa_key
 
 - name: Save private key into file
-  copy:
-    content: "{{ rsa_key.key.private_key  }}"
+  ansible.builtin.copy:
+    content: "{{ rsa_key.key.private_key }}"
     dest: "{{ ec2_keypair_file }}"
     mode: 0400
   when: rsa_key is changed
 
 - name: Create a virtual machine
-  ec2_instance:
+  amazon.aws.ec2_instance:
     name: ec2-default-{{ ec2_resource_prefix }}
     instance_type: "{{ custom_ami_ec2_instance_type }}"
     image_id: "{{ ec2_ami_image_id }}"
@@ -86,7 +86,8 @@
     state: started
   register: result
 
-- set_fact:
+- name: Set 'ec2_instance_id' variable
+  ansible.builtin.set_fact:
     ec2_instance_id: "{{ result.instances.0.instance_id }}"
 
 - name: Add host to inventory
