--- a/roles/ec2_instance_terminate_by_tag/tasks/main.yml
+++ b/roles/ec2_instance_terminate_by_tag/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
-- block:
+- name: Run 'ec2_instance_terminate_by_tag' role
+  module_defaults:
+    group/aws: "{{ aws_role_credentials }}"
+
+  block:
     - name: Verify that tag to terminate instances with was provided
       ansible.builtin.fail:
         msg: -"Please set 'tag_key_to_terminate_instances' to a tag based on which instances should be terminated..."
@@ -7,7 +11,7 @@
 
     - name: Prepare filters dict to filter running instances with specified tag
       ansible.builtin.set_fact:
-        instance_filters: "{{ { 'instance-state-name': 'running' ,  'tag:' + tag_key_to_terminate_instances: tag_value_to_terminate_instances } }}"
+        instance_filters: "{{ {'instance-state-name': 'running', 'tag:' + tag_key_to_terminate_instances: tag_value_to_terminate_instances} }}"
 
     - name: Get instances to be terminated
       amazon.aws.ec2_instance_info:
@@ -18,9 +22,11 @@
       ansible.builtin.set_fact:
         instance_ids: "{{ tagged_instances.instances | map(attribute='instance_id') | list }}"
 
-    - when: terminate_protected_instances == True
+    - name: Disable 'termination_protection'
+      when: terminate_protected_instances == True
       block:
-        - debug:
+        - name: Verify that terminate_protected_instances=True
+          ansible.builtin.debug:
             msg:
               - "'terminate_protected_instances' is set to True..."
               - Instances with termination protection enabled will also be terminated...
@@ -46,10 +52,9 @@
     - name: Create list of terminated instances
       ansible.builtin.set_fact:
         terminated_instances: "{{ terminate_result.results | map(attribute='terminate_success') | list | flatten }}"
-    - debug:
+
+    - name: Verify that the instances have been successfully terminated
+      ansible.builtin.debug:
         msg:
           - Terminated instances successfully -> {{ terminated_instances }}
       when: terminated_instances | length != 0
-
-  module_defaults:
-    group/aws: "{{ aws_role_credentials }}"
