--- a/tests/integration/targets/test_awsconfig_multiregion_cloudtrail/tasks/main.yml
+++ b/tests/integration/targets/test_awsconfig_multiregion_cloudtrail/tasks/main.yml
@@ -1,21 +1,24 @@
 ---
-- set_fact:
-    test_resource_prefix: ansible-multiregion-cloudtrail-{{ 101 | random(1,10) }}
+- name: Set 'test_resource_prefix' variable
+  ansible.builtin.set_fact:
+    test_resource_prefix: ansible-multiregion-cloudtrail-{{ 101 | random(1, 10) }}
 
-- block:
-    - set_fact:
+- name: Test 'awsconfig_multiregion_cloudtrail' role
+  block:
+    - name: Set 's3_bucket_name' and 'cloud_trail_name' variables
+      ansible.builtin.set_fact:
         s3_bucket_name: s3-{{ test_resource_prefix }}
         cloud_trail_name: trail-{{ test_resource_prefix }}
 
     - name: Create S3 Bucket
-      s3_bucket:
+      amazon.aws.s3_bucket:
         name: "{{ s3_bucket_name }}"
         state: present
         policy: "{{ lookup('template', 'policy.json') }}"
 
     # Create multiregion cloud trail
     - name: Create Multi-region cloud trail
-      include_role:
+      ansible.builtin.include_role:
         name: cloud.aws_ops.awsconfig_multiregion_cloudtrail
       vars:
         operation: create
@@ -27,7 +30,7 @@
 
     # Delete cloud trail
     - name: Create Multi-region cloud trail
-      include_role:
+      ansible.builtin.include_role:
         name: cloud.aws_ops.awsconfig_multiregion_cloudtrail
       vars:
         operation: delete
@@ -37,7 +40,7 @@
 
   always:
     - name: Delete S3 bucket
-      s3_bucket:
+      amazon.aws.s3_bucket:
         name: s3-{{ s3_bucket_name }}
         state: absent
       ignore_errors: true
