--- a/tests/integration/targets/test_customized_ami/tasks/create_infra.yml
+++ b/tests/integration/targets/test_customized_ami/tasks/create_infra.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create a VPC to work in
-  ec2_vpc_net:
+  amazon.aws.ec2_vpc_net:
     cidr_block: "{{ ami_infra_vpc_cidr }}"
     name: vpc-{{ test_resource_prefix }}
     tags:
@@ -8,7 +8,7 @@
   register: vpc
 
 - name: Create a public subnet
-  ec2_vpc_subnet:
+  amazon.aws.ec2_vpc_subnet:
     vpc_id: "{{ vpc.vpc.id }}"
     cidr: "{{ ami_infra_subnet_cidr }}"
     tags:
@@ -16,7 +16,7 @@
   register: subnet
 
 - name: Create internet gateway attached to the VPC
-  ec2_vpc_igw:
+  amazon.aws.ec2_vpc_igw:
     vpc_id: "{{ vpc.vpc.id }}"
     tags:
       test: "{{ test_resource_prefix }}"
@@ -24,7 +24,7 @@
   register: igw
 
 - name: Create Route table for internet gateway (public subnet)
-  ec2_vpc_route_table:
+  amazon.aws.ec2_vpc_route_table:
     vpc_id: "{{ vpc.vpc.id }}"
     subnets:
       - "{{ subnet.subnet.id }}"
@@ -36,7 +36,7 @@
     state: present
 
 - name: Create security group allowing SSH connection
-  ec2_group:
+  amazon.aws.ec2_security_group:
     name: "{{ test_resource_prefix }}-security"
     vpc_id: "{{ vpc.vpc.id }}"
     description: Security group for EC2 instance SSH
@@ -54,33 +54,35 @@
   register: secgroup
 
 - name: Create key pair to connect to the VM
-  ec2_key:
+  amazon.aws.ec2_key:
     name: key-{{ test_resource_prefix }}
     tags:
       test: "{{ test_resource_prefix }}"
   register: rsa_key
 
 - name: Copy RSA private key content into file
-  copy:
+  ansible.builtin.copy:
     content: "{{ rsa_key.key.private_key }}"
     dest: "{{ keyfile_path }}"
     mode: 0400
   when: rsa_key is changed
 
 - name: Create EC2 and update inventory with
+  when: ec2_instance_name is defined
   block:
     - name: Get custom AMI information
-      ec2_ami_info:
+      amazon.aws.ec2_ami_info:
         filters:
           name: "{{ custom_ami_name }}"
       register: ami_info
 
-    - fail:
+    - name: Fail when AMI with name is not found
+      ansible.builtin.fail:
         msg: "Unable to find AMI with name: {{ custom_ami_name }}"
       when: ami_info.images | length == 0
 
     - name: Create a virtual machine
-      ec2_instance:
+      amazon.aws.ec2_instance:
         name: "{{ ec2_instance_name }}"
         instance_type: t2.micro
         image_id: "{{ ami_info.images.0.image_id }}"
@@ -104,5 +106,3 @@
         ansible_ssh_user: fedora
         ansible_host: "{{ result.instances.0.public_ip_address }}"
         ansible_ssh_common_args: -o "UserKnownHostsFile=/dev/null" -o StrictHostKeyChecking=no -i {{ keyfile_path }}
-
-  when: ec2_instance_name is defined
