--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
 [testenv:ansible-lint]
 deps =
   ansible-lint>=6.7.0
-commands = ansible-lint --profile production --format pep8 --nocolor --strict --write {toxinidir}/roles {toxinidir}/tests
+commands = ansible-lint --profile production --format pep8 --nocolor --strict --write {toxinidir}/playbooks {toxinidir}/roles {toxinidir}/tests
 
 [testenv:linters]
 deps =
@@ -30,7 +30,7 @@ commands =
   black -v --check --diff {toxinidir}/plugins {toxinidir}/tests
   yamllint -s {toxinidir}
   flake8 {toxinidir}
-  ansible-lint --profile production --format pep8 --nocolor --strict {toxinidir}/roles {toxinidir}/tests
+  ansible-lint --profile production --format pep8 --nocolor --strict {toxinidir}/playbooks {toxinidir}/roles {toxinidir}/tests
 
 [testenv:py39-sanity]
 deps = ansible
