--- a/playbooks/tasks/deploy_app.yaml
+++ b/playbooks/tasks/deploy_app.yaml
@@ -1,14 +1,14 @@
 ---
 - name: Update ssh_config
-  lineinfile:
-    path: "/etc/ssh/sshd_config"
+  ansible.builtin.lineinfile:
+    path: /etc/ssh/sshd_config
     regex: "{{ item.regex }}"
     line: "{{ item.line }}"
   loop:
-    - regex: "^(# *)?ClientAliveInterval"
-      line: "ClientAliveInterval  1200"
-    - regex: "^(# *)?ClientAliveCountMax"
-      line: "ClientAliveCountMax 3"
+    - regex: ^(# *)?ClientAliveInterval
+      line: ClientAliveInterval  1200
+    - regex: ^(# *)?ClientAliveCountMax
+      line: ClientAliveCountMax 3
   become: true
 
 - name: Install required packages
@@ -25,10 +25,18 @@
 
 - name: Get content of public key
   slurp:
-    src: "~/.ssh/id_rsa.pub"
+    src: ~/.ssh/id_rsa.pub
   register: sshkey
 
-- block:
+- name: Create Cloud Resources (workers, load balancer, etc)
+  module_defaults:
+    group/aws:
+      aws_access_key: "{{ aws_access_key }}"
+      aws_secret_key: "{{ aws_secret_key }}"
+      security_token: "{{ security_token | default(omit) }}"
+      region: "{{ region | default(aws_region) }}"
+
+  block:
     - name: Create Cloud Resources (workers, load balancer, etc)
       delegate_to: localhost
       vars:
@@ -37,7 +45,7 @@
       block:
         - name: Create key pair to connect to the VM
           ec2_key:
-            name: '{{ localhost_key_pair }}'
+            name: "{{ localhost_key_pair }}"
             key_material: "{{ sshkey.content | b64decode }}"
 
         - name: List running instances
@@ -48,16 +56,16 @@
           register: vms
 
         - name: Compute number of instances to create/delete
-          set_fact:
+          ansible.builtin.set_fact:
             expected_instances: "{{ number_of_workers | int - vms.instances | length }}"
 
         - name: Create list of targets hosts
-          ec2_instance:
+          amazon.aws.ec2_instance:
             name: "{{ instance_name }}"
             instance_type: "{{ workers_instance_type }}"
             image_id: "{{ host_config.image_id }}"
-            key_name: '{{ localhost_key_pair }}'
-            subnet_id: '{{ host_config.private_subnet_id }}'
+            key_name: "{{ localhost_key_pair }}"
+            subnet_id: "{{ host_config.private_subnet_id }}"
             network:
               assign_public_ip: false
               delete_on_termination: true
@@ -72,33 +80,32 @@
           when: expected_instances | int > 0
 
         - name: List running instances (once again)
-          ec2_instance_info:
+          amazon.aws.ec2_instance_info:
             filters:
               tag:Name: "{{ instance_name }}"
               instance-state-name: running
           register: vms
 
         - name: Create list of instances (join)
-          set_fact:
+          ansible.builtin.set_fact:
             instances_list: []
-
         - name: Update join_instances
-          set_fact:
+          ansible.builtin.set_fact:
             instances_list: "{{ instances_list + [ item.instance_id + ':' + item.private_ip_address ] }}"
           with_items: "{{ vms.instances }}"
 
     - name: Create inventory file
       template:
         src: inventory.j2
-        dest: "~/inventory.ini"
+        dest: ~/inventory.ini
       vars:
         workers_instances: "{{ vms.instances }}"
         workers_join: "{{ instances_list | join(',') }}"
 
     - name: Create vars file
-      template:
+      ansible.builtin.template:
         src: vars.yaml.j2
-        dest: "~/vars.yaml"
+        dest: ~/vars.yaml
 
     - name: Create private registry and store webapp container image
       block:
@@ -108,13 +115,13 @@
             dest: ~/webapp
 
         - name: Build webapp container image
-          shell:
+          ansible.builtin.shell:
             cmd: podman build -t webapp .
           args:
-            chdir: "~/webapp"
+            chdir: ~/webapp
 
         - name: Check running registry
-          shell:
+          ansible.builtin.shell:
             cmd: >
               podman container
               ps -a
@@ -127,8 +134,8 @@
           become: true
           block:
             - name: Create folders for the registry
-              file:
-                path: "/opt/registry/{{ item }}"
+              ansible.builtin.file:
+                path: /opt/registry/{{ item }}
                 state: directory
               with_items:
                 - auth
@@ -136,14 +143,14 @@
                 - data
 
             - name: Generate credentials for accessing the registry
-              shell:
+              ansible.builtin.shell:
                 cmd: >
                   htpasswd -bBc /opt/registry/auth/htpasswd
                   {{ local_registry_user }}
                   {{ local_registry_pwd }}
 
             - name: Start the registry
-              shell:
+              ansible.builtin.shell:
                 cmd: >
                   podman run --name registry500x
                   -p {{ local_registry_port }}:5000
@@ -159,14 +166,14 @@
             - container.stdout == ""
 
         - name: Push image into private registry
-          shell:
+          ansible.builtin.shell:
             cmd: >
               podman login 127.0.0.1:{{ local_registry_port }} -u '{{ local_registry_user }}' -p '{{ local_registry_pwd }}' --tls-verify=false &&
               podman tag webapp 127.0.0.1:{{ local_registry_port }}/ansible-webapp &&
               podman push 127.0.0.1:{{ local_registry_port }}/ansible-webapp --tls-verify=false
 
     - name: Initialize database tables
-      shell:
+      ansible.builtin.shell:
         cmd: >
           podman run --rm
           -e FLASK_APP="{{ app_config.app_dir }}"
@@ -183,21 +190,21 @@
       run_once: true
 
     - name: Copy playbook into bastion host
-      copy:
+      ansible.builtin.copy:
         src: run_app.yaml
-        dest: "~/playbook.yaml"
+        dest: ~/playbook.yaml
 
     - name: Deploy application into workers
-      shell:
+      ansible.builtin.shell:
         cmd: >
           ansible-playbook playbook.yaml -i inventory.ini -v
           -e '@vars.yaml'
           -e registry_host_port='{{ host_config.private_ip }}:{{ local_registry_port }}'
       args:
-        chdir: "~/"
+        chdir: ~/
 
     - name: Create load balancer
-      elb_classic_lb:
+      amazon.aws.elb_classic_lb:
         state: present
         name: "{{ ansible_host_name }}-lb"
         listeners:
@@ -209,8 +216,8 @@
         security_group_ids:
           - "{{ host_config.group_id }}"
         subnets:
-          - '{{ host_config.public_subnet_id }}'
-        scheme: "internet-facing"
+          - "{{ host_config.public_subnet_id }}"
+        scheme: internet-facing
         wait: true
         wait_timeout: 360
       retries: 5
@@ -219,12 +226,6 @@
       register: lb_result
       delegate_to: localhost
 
-    - debug:
+    - name: Debug application url
+      ansible.builtin.debug:
         msg: "Application url: {{ lb_result.elb.dns_name }}:{{ app_listening_port }}"
-
-  module_defaults:
-    group/aws:
-      aws_access_key: "{{ aws_access_key }}"
-      aws_secret_key: "{{ aws_secret_key }}"
-      security_token: "{{ security_token | default(omit) }}"
-      region: "{{ region | default(aws_region) }}"
